frontend somma 2 num

--- a/appunti.ipynb
+++ b/appunti.ipynb
@@ -45,30 +45,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Per casa \n",
-    "Interfaccia streamlit che fa la chimata al servizio API"
+    "## Chiamata con Requests\n",
+    "\n",
+    "prendo direttamente da thunder la chimata alla mia api con la libreria di python requests\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Copy paste verbatim\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "reqUrl = \"http://localhost:8000/sum\"\n",
+    "\n",
+    "headersList = {\n",
+    " \"Accept\": \"*/*\",\n",
+    " \"Content-Type\": \"application/json\" \n",
+    "}\n",
+    "\n",
+    "payload = json.dumps({\n",
+    "  \"num1\": 42,\n",
+    "  \"num12\": 69\n",
+    "})\n",
+    "\n",
+    "response = requests.request(\"POST\", reqUrl, data=payload,  headers=headersList)\n",
+    "\n",
+    "print(response.text)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
+    "reqUrl = \"http://localhost:8000/sum\"\n",
     "\n",
-    "url = 'http://localhost:8000/sum'\n",
-    "\n",
-    "header = ''\n",
-    "\n",
-    "body = {\n",
-    "  \"num1\": 42,\n",
-    "  \"num2\": 69\n",
+    "headersList = {\n",
+    " \"Accept\": \"*/*\",\n",
+    " \"Content-Type\": \"application/json\" \n",
     "}\n",
+    "num1 = input(\"primo addendo:\")\n",
+    "num2 = input(\"secondo addendo:\")\n",
     "\n",
-    "\n"
+    "payload = json.dumps({\n",
+    "  \"num1\": num1,\n",
+    "  \"num2\": num2\n",
+    "})\n",
+    "\n",
+    "response = requests.request(\"POST\", reqUrl, data=payload,  headers=headersList)\n",
+    "\n",
+    "print(response.text)"
    ]
   }
  ],
